--- a/spotify-downloader/package.json
+++ b/spotify-downloader/package.json
@@ -10,15 +10,19 @@
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^5.10.9",
-    "dotenv": "^8.2.0",
+    "axios": "^0.21.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "axios": "^0.21.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^5.10.9",
+    "socket.io": "^4.8.1",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4",
-    "concurrently": "^5.3.0"
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.4"
   },
   "repository": {
     "type": "git",
