--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "axios": "^1.9.0",
+    "express-rate-limit": "^7.5.0",
     "react-router-dom": "^5.3.4",
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1"
