--- a/spotify-downloader/server/package.json
+++ b/spotify-downloader/server/package.json
@@ -8,21 +8,24 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^5.10.9",
-    "dotenv": "^8.2.0",
+    "archiver": "^5.3.2",
+    "axios": "^0.21.4",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "axios": "^0.21.1",
-     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.6.0",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "googleapis": "^148.0.0",
     "jsonwebtoken": "^8.5.1",
-    "socket.io": "^4.5.1",
-    "ytdl-core": "^4.11.2",
-    "ytsr": "^3.8.0",
-    "archiver": "^5.3.1",
-    "fluent-ffmpeg": "^2.1.2",
-    "node-id3": "^0.2.3",
+    "mongoose": "^5.10.9",
+    "node-id3": "^0.2.9",
+    "socket.io": "^4.8.1",
+    "spotify-web-api-node": "^5.0.2",
     "uuid": "^8.3.2",
-    "spotify-web-api-node": "^5.0.2"
+    "yt-dlp-wrap": "^2.3.12",
+    "ytdl-core": "^4.11.2",
+    "ytsr": "^3.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
